--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -2,10 +2,15 @@
 <html xmlns:th="http://www.thymelaef.org">
 <head>
 <meta charset="UTF-8" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"/>
+	<link rel="stylesheet" th:href="@{resources/css/estilos.css}"></link>
 <title>Insert title here</title>
 </head>
 <body>
-	<table>
+	
+	<h3>Lista de Clientes</h3>
+	<table class="centered">
 		<thead>
 			<tr>
 				<th>Id</th>
